#pragma once

class Duck {
public:
    virtual void quack() = 0;
    virtual void fly() = 0;
};
