#pragma once

class Turkey {
public:
    virtual void gobble() = 0;
    virtual void fly() = 0;
};
